plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.afterburner'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // 몽고DB
//    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    //  OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.security:spring-security-oauth2-client'
    implementation 'org.springframework.security:spring-security-oauth2-jose'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // openAPI(Swagger)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // 시큐리티
//	implementation 'org.springframework.boot:spring-boot-starter-security'

    // 스프링부트
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter'

    // postgreSQL
    runtimeOnly 'org.postgresql:postgresql'

    // Hibernate Types 추가
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.3'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Mockito (테스트용)
    testImplementation 'org.mockito:mockito-core:5.5.0'

    // Jackson (JSON 처리용)
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

}

tasks.named('test') {
    useJUnitPlatform()
}
